Small update to tmux post

--- a/_posts/2023-06-08-tmux.md
+++ b/_posts/2023-06-08-tmux.md
@@ -11,6 +11,10 @@ alias tn='tmux new -s'
 ```
 
 When starting a new terminal console, it is a good idea to create a new tmux session with `tn shell` command, or to attach to an existing session with `ta`.
+The benefit for using tmux sessions are:
+
+1. It is easier to move the sessions around (say from one terminal window to another)
+1. It is easier to scroll up and down using keyboard, and search for content
 
 When already in a tmux session, the following shortcuts are useful:
 
